login page finalized

--- a/src/components/layout/Container.module.css
+++ b/src/components/layout/Container.module.css
@@ -3,9 +3,14 @@
     max-width: 1200px;
     display: flex;
     margin: 0 auto;
-    height: 100%;
 }
 
 .column {
     flex-direction: column;
+}
+
+.height {
+    align-items: center;
+    justify-content: center;
+    height: 100%;
 }
