--- a/src/components/layout/NavBar.module.css
+++ b/src/components/layout/NavBar.module.css
@@ -8,6 +8,7 @@
 }
 
 .nav a {
+    font-weight: boldA;
     display: flex;
     align-items: center;
     flex: 1;
@@ -16,6 +17,7 @@
 }
 
 .nav svg {
+    font-size: 1.5em;
     margin-right: .5em;
 }
 
