--- a/src/components/pages/Login.module.css
+++ b/src/components/pages/Login.module.css
@@ -1,5 +1,11 @@
 .login {
+    color: #fff;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
-    flex: 1;
+    padding: 3em;
+    background-color: #2291F1;
+    border-radius: 10px;
 }
+
