--- a/src/components/layout/Footer.module.css
+++ b/src/components/layout/Footer.module.css
@@ -1,6 +1,7 @@
 .footer{
     border-top: 1px solid #0000003a;
     font-size: .78em;
+    font-weight: 500;
     text-align: center;
     padding: .5em;
     width: 100%;
