--- a/src/components/layout/Container.module.css
+++ b/src/components/layout/Container.module.css
@@ -10,7 +10,12 @@
 }
 
 .height {
-    align-items: center;
     justify-content: center;
     height: 100%;
+}
+
+.align {
+    height: 100%;
+    align-items: center;
+    justify-content: center;
 }
