--- a/src/components/pages/Login.module.css
+++ b/src/components/pages/Login.module.css
@@ -4,9 +4,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 3em;
-    background-color: #2291F1;
+    padding: 2.5em;
+    background-color: #483768;
     border-radius: 10px;
+    font-size: .9em;
 }
 
 .login h1 {
