--- a/src/components/system/System.module.css
+++ b/src/components/system/System.module.css
@@ -16,13 +16,13 @@
     background-color:#B64667 ;
 }
 
+.btn svg {
+    margin-bottom: 10px;
+    font-size: 1.5em;
+}
+
 .btn h3 {
     color: #fff;
     font-size: .9em;
     font-weight: 500;
-}
-
-.btn svg {
-    color: #B64667;
-    font-size: 1.5em;
 }
