--- a/src/components/form/CheckBox.module.css
+++ b/src/components/form/CheckBox.module.css
@@ -1,6 +1,5 @@
 .form_control {
     display: flex;
-    align-items: center;
 }
 
 .form_control label {
@@ -19,5 +18,17 @@
 
 .column {
     flex-direction: column;
+    align-items: start;
+}
+
+.justify {
+    justify-content: center;
+}
+
+.bold label {
+    font-weight: bold;
+}
+
+.align_start {
     align-items: start;
 }
