--- a/src/components/form/Input.module.css
+++ b/src/components/form/Input.module.css
@@ -4,17 +4,15 @@
 }
 
 .form_control label {
-    font-size: .9em;
-    font-weight: bold;
+    font-size: .8em;
+    font-weight: 500;
     margin-right: 5px;
 }
 
 .form_control input {
     outline: none;
-    border: none;
     border-radius: 3px;
-    padding: .3em 4em .3em .2em;
-    flex: 1;
+    border: 1px solid rgb(110, 110, 110);
 }
 
 .form_control input::placeholder{
@@ -32,4 +30,18 @@
 
 .light label {
     font-weight: 400;
+}
+
+.flex_1 input {
+    flex: 1;
+}
+
+.border_none {
+    border: none;
+}
+
+.title {
+    font-size: .8em;
+    font-weight: 400;
+    margin-right: 5px;
 }
