ficha forms finalized

--- a/src/components/ficha/FichaForm.module.css
+++ b/src/components/ficha/FichaForm.module.css
@@ -1,13 +1,23 @@
+@media (max-width: 633px) {
+    .flex {
+        flex-wrap: wrap;
+    }
+    .sex {
+        flex-wrap: wrap;
+    }
+}
+
 .ficha_form {
     padding: 1em;
     background-color: gainsboro;
 }
 
+
+
 .flex {
     display: flex;
     column-gap: 10px;
 }
-
 .sex {
     display: flex;
     align-self: center;
