--- a/src/components/system/System.module.css
+++ b/src/components/system/System.module.css
@@ -12,6 +12,22 @@
     transition: 0.5s;
 }
 
+@media(max-width: 500px) {
+    .btn {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 1.5em 0em;
+        border: none;
+        border-radius: 10px;
+        background-color: #51436C;
+        margin: 10px;
+        width: 100%;
+        cursor: pointer;
+        transition: 0.5s;
+    }
+}
+
 .btn:hover{
     background-color:#B64667 ;
 }
