--- a/src/components/layout/Container.module.css
+++ b/src/components/layout/Container.module.css
@@ -3,6 +3,7 @@
     max-width: 1200px;
     display: flex;
     margin: 0 auto;
+    flex: 1;
 }
 
 .column {
@@ -11,16 +12,13 @@
 
 .height {
     justify-content: center;
-    height: 100%;
 }
 
 .align {
-    height: 100%;
     align-items: center;
     justify-content: center;
 }
 
 .auto {
-    height: auto;
     justify-content: center;
 }
